Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@136539 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/alarm.html
+++ b/local/directive/devices/alarm.html
@@ -2,9 +2,9 @@
   <div class="alarm-header">
     <img ng-src="{{alarmIcon}}" class="device-icon">
     <div class="alarm-header-info">
-      <p>{{ainfo.name}}</p>
-      <p>{{ainfo.module}}</p>
-      <p>{{ainfo.state}}</p>
+      <p>{{::ainfo.name}}</p>
+      <p>{{::ainfo.module}}</p>
+      <p>{{::ainfo.state}}</p>
     </div>
   </div>
 
