--- a/local/directive/devices/devices-dev.html
+++ b/local/directive/devices/devices-dev.html
@@ -1,6 +1,6 @@
 <div class="devices-dev-wrap">
   <div class="devices-dev-box">
-    <img ng-src="{{devIcon}}" title="{{devinfo.module}}">
+    <img ng-src="{{::devIcon}}" title="{{::devinfo.module}}">
     <h4>{{devinfo.name}}</h4>
   </div>
 
