--- a/local/html_route/all_rooms_template.html
+++ b/local/html_route/all_rooms_template.html
@@ -1,42 +1,44 @@
 <div class="all-rooms-nav">
   <!-- favorites sensors !-->
   <div class="favorites-sensors-wrap">
-    <div class="info-sensor" ng-repeat="sensor in allRooms.favoriteSensors track by sensor.id" title="{{sensor.name}}">
-      <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
-      <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
-      <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
-      <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
-      <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+    <div class="info-sensor" ng-repeat="sensor in allRooms.favoriteSensors track by sensor.id" title="{{::sensor.name}}">
       <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
+      <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co2.png">
+      <img ng-if="sensor.subtype === 'door' && !sensor.value" src="img/sensors/door-close.png">
+      <img ng-if="sensor.subtype === 'door' && sensor.value" src="img/sensors/door-open.png">
+      <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
       <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
       <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
-      <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
-      <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
+      <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
+      <img ng-if="sensor.subtype === 'pressure'" src="img/sensors/pressure.png">
+      <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+      <img ng-if="sensor.subtype === 'smoke-alarm'" src="img/sensors/smoke.png">
+      <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
       <div class="sensor-details">
         <h1>{{sensor.value}}</h1>
       </div>
     </div>
   </div>
-  <!-- room quick select !-->
+  <!-- add room !-->
   <div class="category-wrap">
     <button type="button" class="button add-new blue-btn" ng-click="allRooms.addRoomForm = !allRooms.addRoomForm" ng-hide="allRooms.addRoomForm" title="add room"></button>
     <form ng-submit="allRooms.addRoom($event)" autocomplete="off" ng-if="allRooms.addRoomForm">
-      <input type="text" placeholder="Add new room" pattern=".{3,15}" id="add-room-name" class="form-input" required title="new room name" maxlength="15">
+      <input type="text" placeholder="Add new room" pattern=".{3,25}" id="add-room-name" class="form-input" required title="3 to 25 characters">
     </form>
   </div>
 </div>
 
 <div class="all-rooms-view-point">
   <small class="color-transparent" ng-if="!allRooms.data.getCategories.length">You don't have any rooms, click on the + button and add one</small>
-  <div ng-repeat="category in allRooms.data.getCategories" id="{{category.id}}">
+  <div ng-repeat="category in allRooms.data.getCategories" id="{{::category.id}}">
     <div class="template-nav">
       <h3 class="category-name" ng-click="categoryName = !categoryName" ng-hide="categoryName">{{category.name}}</h3>
 
       <!-- rename room !-->
       <form ng-submit="allRooms.changeCategoryName(category)" ng-show="categoryName" class="category-name-form">
-        <input type="text" pattern=".{3,15}" required class="form-input" placeholder="Category name" ng-model="category.name">
+        <input type="text" pattern=".{3,25}" required class="form-input" placeholder="Category name" ng-model="category.name">
         <button type="submit" class="button category-name-submit" ng-click="categoryName = false"></button>
-        <button type="button" class="button category-name-reset" ng-click="categoryName = false"></button>
+        <!-- <button type="button" class="button category-name-reset" ng-click="categoryName = false"></button> -->
         <button type="reset" class="button category-name-delete" ng-click="allRooms.deleteCategory(category)">
           <i class="material-icons">delete</i>
         </button>
@@ -44,20 +46,22 @@
 
       <!-- sensors !-->
       <div class="sensor-wrap">
-        <div class="info-sensor" ng-repeat="sensor in allRooms[category.id].sensor track by sensor.id" title="{{sensor.name}}">
-          <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
-          <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
-          <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co.png">
-          <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
-          <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+        <div class="info-sensor" ng-repeat="sensor in allRooms[category.id].sensor track by sensor.id" title="{{::sensor.name}}">
           <img ng-if="sensor.subtype === 'co-alarm'" src="img/sensors/co.png">
-          <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
-          <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
+          <img ng-if="sensor.subtype === 'co2'" src="img/sensors/co2.png">
           <img ng-if="sensor.subtype === 'door' && sensor.value === false" src="img/sensors/door-close.png">
           <img ng-if="sensor.subtype === 'door' && sensor.value === true" src="img/sensors/door-open.png">
+          <img ng-if="sensor.subtype === 'humidity'" src="img/sensors/humidity.png">
+          <img ng-if="sensor.subtype === 'light'" src="img/sensors/lux.png">
+          <img ng-if="sensor.subtype === 'motion'" src="img/sensors/motion.png">
+          <img ng-if="sensor.subtype === 'noise'" src="img/sensors/noise.png">
+          <img ng-if="sensor.subtype === 'pressure'" src="img/sensors/pressure.png">
+          <img ng-if="sensor.subtype === 'rain'" src="img/sensors/rain.png">
+          <img ng-if="sensor.subtype === 'smoke-alarm'" src="img/sensors/smoke.png">
+          <img ng-if="sensor.subtype === 'temperature'" src="img/sensors/temp.png">
           <div class="sensor-details">
             <h1>{{sensor.value}}</h1>
-            <!--<p>{{sensor.name}}</p>!-->
+            <!--<p>{{::sensor.name}}</p>!-->
           </div>
         </div>
         <small class="color-transparent margin-auto" ng-show="allRooms[category.id].sensor.length === 0">
