--- a/local/index.html
+++ b/local/index.html
@@ -85,6 +85,8 @@
   <script defer src="js/controllers/SecurityCtrl.js"></script>
   <script defer src="js/controllers/SettingsServerCtrl.js"></script>
 
+  <!-- live stream, play recordings -->
+  <script defer src="js/service/play-stream.js"></script>
   <!-- single devices !-->
   <script defer src="js/devices/light.js"></script>
   <script defer src="js/devices/switch.js"></script>
