--- a/local/directive/devices/sensor.html
+++ b/local/directive/devices/sensor.html
@@ -1,10 +1,10 @@
 <div class="sensor-device-wrap">
   <div class="device-header">
-    <img ng-src="{{sensorImg}}" class="device-icon" title="refresh data">
+    <img ng-src="{{sensorImg}}" class="device-icon" title="{{::sensorinfo.subtype}}" alt="{{::sensorinfo.subtype}}">
     <div class="sensor-content-data">
       <h2>{{sensorinfo.value}}</h2>
-      <p>{{sensorinfo.name}}</p>
-      <p>{{sensorinfo.module}}</p>
+      <p>{{::sensorinfo.name}}</p>
+      <p>{{::sensorinfo.module}}</p>
     </div>
   </div>
 </div>
