--- a/local/directive/devices/shutter.html
+++ b/local/directive/devices/shutter.html
@@ -1,16 +1,16 @@
 <div class="device-wrap">
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{shinfo.id}}" ng-model="shinfo.favorites" ng-change="toggleAddToFavorites(shinfo.favorites, shinfo.id)">
-    <label for="add-to-favorites-{{shinfo.id}}" class="device-add-to-favorites-label" title="add to favorites" ng-click="bbb()"></label>
+    <input type="checkbox" id="add-to-favorites-{{::shinfo.id}}" ng-model="shinfo.favorites" ng-change="toggleAddToFavorites(shinfo.favorites, shinfo.id)">
+    <label for="add-to-favorites-{{::shinfo.id}}" class="device-add-to-favorites-label" title="add to favorites" ng-click="bbb()"></label>
   </span>
   <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
 
   <div class="device-header">
     <img ng-src="{{shutterIcon}}" class="device-icon">
     <div class="device-content-data">
-      <p>{{shinfo.name}}</p>
-      <p>{{shinfo.type}}</p>
-      <p>{{shinfo.module}}</p>
+      <p>{{::shinfo.name}}</p>
+      <p>{{::shinfo.type}}</p>
+      <p>{{::shinfo.module}}</p>
     </div>
   </div>
 
@@ -27,25 +27,25 @@
   <div class="option-wrap" ng-show="deviceSchedule">
     <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{shinfo.id}}" ng-submit="quickSchedule(shinfo, shutterState)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::shinfo.id}}" ng-submit="quickSchedule(shinfo, shutterState)">
       <p>Shutter will
         <span ng-show="shutterState === 'open'" class="color-blue">open</span>
         <span ng-show="shutterState === 'close'" class="color-orange">close</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{shinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{shinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" id="device-schedule-hours-{{::shinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{::shinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{shinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{shinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::shinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::shinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{shinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{shinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::shinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::shinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
         <button type="button" class="device-btn" ng-click="shutterState = 'close'" ng-class="{'device-btn-active': shutterState === 'close'}">Close</button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{shinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::shinfo.id}}">Schedule</button>
       </div>
     </div>
   </div>
