--- a/local/directive/devices/switch.html
+++ b/local/directive/devices/switch.html
@@ -1,16 +1,16 @@
 <div class="device-wrap">
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{sinfo.id}}" ng-model="sinfo.favorites" ng-change="toggleAddToFavorites(sinfo.favorites, sinfo.id)">
-    <label for="add-to-favorites-{{sinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+    <input type="checkbox" id="add-to-favorites-{{::sinfo.id}}" ng-model="sinfo.favorites" ng-change="toggleAddToFavorites(sinfo.favorites, sinfo.id)">
+    <label for="add-to-favorites-{{::sinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
   <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
 
   <div class="device-header">
     <img ng-src="{{switchIcon}}" class="device-icon" ng-click="toggleDevicePowerState(sinfo.id)" title="toggle state">
     <div class="device-content-data">
-      <p>{{sinfo.name}}</p>
-      <p>{{sinfo.type}}</p>
-      <p>{{sinfo.module}}</p>
+      <p>{{::sinfo.name}}</p>
+      <p>{{::sinfo.type}}</p>
+      <p>{{::sinfo.module}}</p>
     </div>
   </div>
 
@@ -28,25 +28,25 @@
   <div class="option-wrap" ng-show="deviceSchedule">
     <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{sinfo.id}}" ng-submit="quickSchedule(sinfo, scheduleState)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::sinfo.id}}" ng-submit="quickSchedule(sinfo, scheduleState)">
       <p>Device will turn
         <span class="color-blue" ng-if="scheduleState">ON</span>
         <span class="color-orange" ng-if="!scheduleState">OFF</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{sinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{sinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" id="device-schedule-hours-{{::sinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{::sinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{sinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{sinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::sinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::sinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{sinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{sinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::sinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::sinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
         <button type="button" class="device-btn" ng-class="{'device-btn-active': !scheduleState}" ng-click="scheduleState = false">Off</button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{sinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::sinfo.id}}">Schedule</button>
       </div>
     </div>
   </div>
