--- a/local/directive/devices/thermostat.html
+++ b/local/directive/devices/thermostat.html
@@ -1,16 +1,16 @@
 <div class="device-wrap">
   <span class="device-add-to-favorites">
-    <input type="checkbox" id="add-to-favorites-{{tinfo.id}}" ng-model="tinfo.favorites" ng-change="toggleAddToFavorites(tinfo.favorites, tinfo.id)">
-    <label for="add-to-favorites-{{tinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
+    <input type="checkbox" id="add-to-favorites-{{::tinfo.id}}" ng-model="tinfo.favorites" ng-change="toggleAddToFavorites(tinfo.favorites, tinfo.id)">
+    <label for="add-to-favorites-{{::tinfo.id}}" class="device-add-to-favorites-label" title="add to favorites"></label>
   </span>
   <img ng-src="img/button/schedule.svg" class="device-schedule-btn" ng-click="deviceSchedule = !deviceSchedule" title="quick schedule">
 
   <div class="device-header">
     <img ng-src="img/device/thermostat.png" class="device-icon">
     <div class="device-content-data">
-      <p>{{tinfo.name}}</p>
-      <p>{{tinfo.type}}</p>
-      <p>{{tinfo.module}}</p>
+      <p>{{::tinfo.name}}</p>
+      <p>{{::tinfo.type}}</p>
+      <p>{{::tinfo.module}}</p>
     </div>
   </div>
 
@@ -19,8 +19,8 @@
     <div class="device-footer-btn-wrap">
       <button class="device-btn-opt device-minus-btn" ng-click="tempDown(tinfo)"></button>
       <butotn class="device-btn-opt" ng-click="setTemp(tinfo)" ng-class="{'success-green': responseSuccess}">
-        <span class="color-blue">{{tinfo.value}}</span> /
-        <span class="color-green">{{tinfo.target}}</span>
+        <span class="color-blue">{{::tinfo.value}}</span> /
+        <span class="color-green">{{::tinfo.target}}</span>
       </butotn>
       <button class="device-btn-opt device-plus-btn" ng-click="tempUp(tinfo)"></button>
     </div>
@@ -30,24 +30,24 @@
   <div class="option-wrap" ng-show="deviceSchedule">
     <button type="reset" class="close-device-options close-form-btn" ng-click="deviceSchedule = false">
     </button>
-    <form class="add-schedule-dev-form" id="dev-schedule-form-{{tinfo.id}}" ng-submit="quickSchedule(tinfo, targetForSchedule)">
+    <form class="add-schedule-dev-form" id="dev-schedule-form-{{::tinfo.id}}" ng-submit="quickSchedule(tinfo, targetForSchedule)">
       <p>Set thermostat to
-        <span class="color-orange">{{targetForSchedule}}°</span>
+        <span class="color-orange">{{::targetForSchedule}}°</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{tinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{tinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
+      <input type="number" class="form-number" id="device-schedule-hours-{{::tinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{::tinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
           <small>Daily</small>
-          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{tinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-daily-{{tinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
+          <input type="radio" name="repeat-device-schedule" value="daily" id="schedule-device-daily-{{::tinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-daily-{{::tinfo.id}}" class="radio-label" title="schedule will repeat daily"></label>
         </div>
         <div class="add-schedule-dev-option">
           <small>Once</small>
-          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{tinfo.id}}" ng-model="deviceScheduleRepeat">
-          <label for="schedule-device-once-{{tinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
+          <input type="radio" name="repeat-device-schedule" value="once" id="schedule-device-once-{{::tinfo.id}}" ng-model="deviceScheduleRepeat">
+          <label for="schedule-device-once-{{::tinfo.id}}" class="radio-label" title="schedule will fire just once"></label>
         </div>
       </div>
 
@@ -60,7 +60,7 @@
         <button type="button" class="device-btn device-plus-btn" ng-click="tempUpSchedule(targetForSchedule)"></button>
       </div>
       <div class="device-footer-option-wrap">
-        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{tinfo.id}}">Schedule</button>
+        <button type="submit" class="device-options-btn" form="dev-schedule-form-{{::tinfo.id}}">Schedule</button>
       </div>
     </div>
   </div>
