--- a/local/html_route/settings/server_template.html
+++ b/local/html_route/settings/server_template.html
@@ -7,7 +7,7 @@
 
 <div class="settings-toggle-btns-wrap">
   <p ng-click="settingsToggleBtn = false" ng-class="{'color-white' : !settingsToggleBtn}">General Settings</p>
-  <div class="active-line-indicator settings-toggle-btns-indicator" ng-class="{'slide-line-indicator' : settingsToggleBtn}"></div>
+  <div class="active-line-indicator settings-toggle-btns-indicator" ng-class="{'user' : settingsToggleBtn}"></div>
 </div>
 
 <!-- general server settings !-->
@@ -29,7 +29,7 @@
       </div>
 
       <h5 class="color-transparent">Version:
-        <span class="color-white">{{server.serverInfoData.version}}</span>
+        <span class="color-white">{{::server.serverInfoData.version}}</span>
       </h5>
       <button type="button" class="settings-btn reboot" ng-click="server.updateApp()">Reboot Server</button>
     </div>
@@ -41,33 +41,38 @@
       <p class="color-red server-status-indicator" ng-if="God.serverOffline">Offline</p>
 
       <p class="color-transparent">Ping:
-        <span class="color-white">{{server.serverInfoData.ping}}</span>
+        <span class="color-white">{{::server.serverInfoData.ping}}</span>
       </p>
       <p class="color-transparent">IP:
-        <span class="color-white">{{server.serverInfoData.ip}}</span>
+        <span class="color-white">{{::server.serverInfoData.ip}}</span>
       </p>
       <p class="color-transparent">External IP:
-        <span class="color-white">{{server.serverInfoData.external_ip}}</span>
+        <span class="color-white">{{::server.serverInfoData.external_ip}}</span>
       </p>
       <p class="color-transparent">OS:
-        <span class="color-white">{{server.serverInfoData.node_platform}}</span>
+        <span class="color-white">{{::server.serverInfoData.node_platform}}</span>
       </p>
       <p class="color-transparent">Node version:
-        <span class="color-white">{{server.serverInfoData.node_version}}</span>
+        <span class="color-white">{{::server.serverInfoData.node_version}}</span>
       </p>
       <p class="color-transparent">Node arch:
-        <span class="color-white">{{server.serverInfoData.node_arch}}</span>
+        <span class="color-white">{{::server.serverInfoData.node_arch}}</span>
       </p>
+      <small class="color-transparent">Recording folder size in MB</small>
+        <form class="server-settings-form" ng-submit="server.setRecordingsLimit()">
+          <input type="number" name="record-folder-size" min="0" class="form-number" ng-model="server.serverInfoData.recording_quota">
+          <button type="submit" name="set" class="settings-btn green">Set Limit</button>
+        </form>
 
     </div>
 
     <div class="settings-box">
       <h4>Bridges</h4>
-      <p class="server-status-indicator">{{server.data.getBridges.length}}</p>
+      <p class="server-status-indicator">{{::server.data.getBridges.length}}</p>
       <p class="color-transparent">Bridges currently on this server</p>
 
       <p>
-        <span class="color-white" ng-repeat="bridge in server.data.getBridges">{{bridge.name}}
+        <span class="color-white" ng-repeat="bridge in server.data.getBridges">{{::bridge.name}}
           <span ng-hide="$index == server.data.getBridges.length-1">,</span>
         </span>
       </p>
@@ -120,9 +125,9 @@
 
       <ul class="server-log-list">
         <li class="server-log-li" ng-repeat="log in server.data.getLog">
-          <!--<span class="color-white">{{log.name}}</span>!-->
-          <p class="color-white">{{log.msg}} </p>
-          <p class="color-transparent">{{log.time * 1000 | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
+          <!--<span class="color-white">{{::log.name}}</span>!-->
+          <p class="color-white">{{::log.msg}} </p>
+          <p class="color-transparent">{{::log.time * 1000 | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
         </li>
       </ul>
     </div>
@@ -140,12 +145,12 @@
 
       <ul class="server-log-list">
         <li class="server-log-li" ng-repeat="log in server.actionLog">
-          <p class="color-white">{{log.user}} turned
+          <p class="color-white">{{::log.user}} turned
             <b ng-if="server.testRegex(log.action, 'off')" class="color-orange">OFF</b>
             <b ng-if="server.testRegex(log.action, 'on')" class="color-blue">ON</b>
-             {{log.device}}
+             {{::log.device}}
           </p>
-          <p class="color-white">{{log.time | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
+          <p class="color-white">{{::log.time | date: 'd/MMM/yyyy HH:mm:ss'}}</p>
         </li>
         <li ng-click="server.loadMoreLog()" class="button server-log-load-more">
           <p>Load more</p>
@@ -156,124 +161,6 @@
   </div>
 </div>
 
-<!--
-  <div class="row settings-row">
-    <div class="col-xs-12 col-sm-12 col-md-10 settings-tab-hlp">
-      <h4>Server Status</h4>
-      <h4>Up to date:
-        <span ng-class="{'color-green':server.upToDate,'color-orange': !server.upToDate}">
-          <span ng-if="server.upToDate">Yes</span>
-          <span ng-if="!server.upToDate">No</span>
-          <span ng-if="server.upToDate === 'undefined'">Check failed</span>
-        </span>
-      </h4>
-      <h4>Version:
-        <span class="color-transparent">{{server.serverInfoData.version}}</span>
-      </h4>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-2 settings-tab-hlp">
-      <button ng-if="!server.upToDate" type="button" class="button blue-btn" ng-click="server.updateApp()">
-        Update
-      </button>
-      <button ng-if="server.upToDate" type="button" class="button orange-btn" ng-click="server.updateApp()">
-        Reboot
-      </button>
-    </div>
-  </div>
-
-  <div class="row settings-row">
-    <h4>Server Info</h4>
-    <p>Ping:
-      <span class="color-transparent">{{server.serverInfoData.ping}}</span>
-    </p>
-    <p>IP:
-      <span class="color-transparent">{{server.serverInfoData.ip}}</span>
-    </p>
-    <p>External IP:
-      <span class="color-transparent">{{server.serverInfoData.external_ip}}</span>
-    </p>
-    <p>OS:
-      <span class="color-transparent">{{server.serverInfoData.node_platform}}</span>
-    </p>
-    <p>Node version:
-      <span class="color-transparent">{{server.serverInfoData.node_version}}</span>
-    </p>
-    <p>Node arch:
-      <span class="color-transparent">{{server.serverInfoData.node_arch}}</span>
-    </p>
-  </div>
-
-  <div class="row settings-row">
-    <div class="col-xs-12 col-sm-8 col-lg-9 settings-tab-hlp">
-      <h4>Bridges:</h4>
-      <p>
-        <span class="color-blue" ng-repeat="bridge in server.data.getBridges">{{bridge.name}}
-          <span ng-hide="$index == server.data.getBridges.length-1">,</span>
-        </span>
-      </p>
-    </div>
-    <div class="col-xs-12 col-sm-4 col-lg-3 settings-tab-hlp">
-      <form type="form" id="change-server-name-form" autocomplete="off" ng-submit="server.changeServerName(server.serverInfoData.name)">
-        <input type="text" id="settings-server-name" placeholder="Server name" class="form-input" ng-model="server.serverInfoData.name">
-      </form>
-      <button type="submit" form="change-server-name-form" class="button blue-btn">Rename</button>
-    </div>
-  </div>
-
-  <div class="row settings-row">
-    <div class="col-xs-12 col-sm-12 col-md-6 settings-tab-hlp">
-      <h4>Server Backup</h4>
-      <input type="file" id="restore-server" accept="application/json" onchange="angular.element(this).scope().restore(this)">
-      <label for="restore-server" class="button orange-btn">
-        Restore
-      </label>
-      <button type="button" class="button blue-btn" data-toggle="collapse" data-target="#backup">
-        Backup
-      </button>
-    </div>
-
-    <div class="col-xs-12 col-sm-12 col-md-6 settings-tab-hlp justify-end">
-      <button type="button" class="button orange-btn" ng-click="server.leaveServer()">
-        Leave Server
-      </button>
-      <a ui-sref="frame.addserver" class="button blue-btn">
-        Add New Servers
-      </a>
-    </div>
-  </div>
-
-  <div id="backup" class="collapse settings-backup">
-    <h4 class="color-white">Download your backup form <a id="download-backup" download="nhome-config.json">HERE</a>
-  </div>
-  <div>
-    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 settings-box">
-      <h3>Server Location</h3>
-      <small class="color-transparent">Set your location according to the location of your server</small>
-      <google-maps></google-maps>
-
-      <div class="custom-input-wrap">
-        <h3>Use IP address</h3>
-        <input type="checkbox" id="google-maps-IP" ng-click="server.useIpAddress()">
-        <label for="google-maps-IP" class="checkbox-label"></label>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 settings-box">
-      <h3>Server Log</h3>
-      <div id="server-log">
-        <p class="server-log-pre" ng-repeat="log in server.data.getLog">
-          <span class="color-blue">{{log.name}}</span>
-          <span class="color-white">{{log.msg}} </span>
-          <span class="color-transparent">{{log.time * 1000 | date: 'd/MMM/yyyy HH:mm:ss'}}</span>
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <button ng-show="server.data.getUserProfile.level === 'OWNER'" type="button" class="button red-btn" title="double click to confirm" ng-click="server.deleteServer()">
-    Delete Server
-  </button>
-</div>
-!-->
 <!-- user settings !-->
 <div class="settings-content-wrap" ng-show="settingsToggleBtn">
   <div class="settings-box-wrap">
@@ -325,17 +212,17 @@
         </tr>
         <tr ng-repeat="user in server.data.userList">
           <td>
-            {{user.email}}
+            {{::user.email}}
           </td>
           <td>
-            {{user.username}}
+            {{::user.username}}
           </td>
           <td ng-hide="server.data.getUserProfile.level === 'OWNER'">
-            {{user.level}}
+            {{::user.level}}
           </td>
           <td ng-show="server.data.getUserProfile.level === 'OWNER'">
             <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level, $index)">
-              <!-- <option value="OWNER">Owner</option> -->
+              <option value="OWNER">Owner</option>
               <option value="ADMIN">Admin</option>
               <!--<option value="USER">User</option>!-->
               <option value="DELETE" class="settings-delet-user">Delete</option>
@@ -343,25 +230,6 @@
           </td>
         </tr>
       </table>
-      <!--<div class="server-log-li">
-        <h5 class="color-transparent">Email</h5>
-        <h5 class="color-transparent">Name</h5>
-        <h5 class="color-transparent">Status</h5>
-      </div>
-
-      <ul class="server-log-list">
-        <li class="server-log-li" ng-repeat="user in server.data.userList">
-          <p class="settings-user-list-item">{{user.email}}</p>
-          <p class="settings-user-list-item">{{user.username}}</p>
-          <p class="settings-user-list-item" ng-hide="server.data.getUserProfile.level === 'OWNER'">{{user.level}}</p>
-          <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level)" ng-show="server.data.getUserProfile.level === 'OWNER'">
-            <option value="OWNER">Owner</option>
-            <option value="ADMIN">Admin</option>
-            <option value="USER">User</option>
-            <option value="DELETE" class="settings-delet-user">Delete</option>
-          </select>
-        </li>
-      </ul>!-->
     </div>
   </div>
 </div>
